--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>房屋心電圖 - 結構健康監測概念</title>
+    <title>房屋心電圖 - 結構健康監測概念，張渝江技師</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Noto+Sans+TC:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -64,7 +64,7 @@
         </div>
 
         <header class="text-center mb-6">
-            <h1 id="appTitle" class="text-3xl font-bold text-sky-700">房屋心電圖</h1>
+            <h1 id="appTitle" class="text-3xl font-bold text-sky-700">房屋心電圖，張渝江技師</h1>
             <p id="appSubtitle" class="text-lg text-slate-600 mt-1">結構健康監測概念模擬</p>
         </header>
 
@@ -175,7 +175,7 @@
             },
             "en": {
                 "appTitle": "House ECG",
-                "appSubtitle": "Structural Health Monitoring Concept",
+                "appSubtitle": "Structural Health Monitoring Concept by Yu Jiang Chang, PE",
                 "baselineFreqTitle": "Baseline Structural Frequency",
                 "currentFreqTitle": "Current Structural Frequency",
                 "timeDomainTitle": "Real-time Vibration (Time Domain)",
