--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 "hzUnit": "Hz"
             },
             "en": {
-                "appTitle": "House ECG",
+                "appTitle": "House ECG by Yu Jiang Chang, PE",
                 "appSubtitle": "Structural Health Monitoring Concept by Yu Jiang Chang, PE",
                 "baselineFreqTitle": "Baseline Structural Frequency",
                 "currentFreqTitle": "Current Structural Frequency",
@@ -206,7 +206,7 @@
             }
         };
 
-        let currentLang = 'zh-TW'; // 預設語言
+        let currentLang = 'en'; // 預設語言
 
         // DOM 元素
         const appTitle = document.getElementById('appTitle');
