--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <header class="text-center mb-6">
             <h1 id="appTitle" class="text-3xl font-bold text-sky-700">房屋心電圖，張渝江技師</h1>
-            <p id="appSubtitle" class="text-lg text-slate-600 mt-1">結構健康監測概念模擬</p>
+            <p id="appSubtitle" class="text-lg text-slate-600 mt-1">結構健康監測概念模擬，張渝江技師</p>
         </header>
 
         <main>
